# rust-monorepo-boilerplate

./: Cargo.toml  README.md  justfile
crates/ramps/: Cargo.toml
