[workspace]
members = [
    "crates/primitives",
    "crates/crypto",
    "crates/wallet-core",
    "crates/blockchain",
    "crates/ramps",
    "bin/api",
    "bin/cli",
]
resolver = "2"

[workspace.dependencies]

thiserror = "1.0"
# Alloy (latest stable series)
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
http = "1.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# --- Serialization / JSON ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# --- Database (PostgreSQL) ---
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "json",
    "chrono"
] }
dotenvy = "0.15"

# --- Ethereum / Alloy Stack ---
alloy = { version = "1.1", features = ["full"] }
alloy-primitives = "1.4.1"
alloy-signer-local = { version = "1.1", features = ["mnemonic"] }

# --- Crypto / Signing ---
sha2 = "0.10"
rand = "0.8"
bip39 = { version = "2.0", features = ["rand"] }
zeroize = "1.8"
shamir = "2.0"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
# --- Logging / Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Utilities ---
hex = "0.4"
url = "2.5"
anyhow = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

# --- Futures / Async Utilities ---
futures = "0.3.31"
tokio-stream = "0.1"
alloy-signer = "1.1.2"

# Crypto
secp256k1 = { version = "0.29", features = ["rand-std", "recovery"] }
